--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
   <!-- ABOUT SECTION -->
   <section id="about">
     <h2>About Me</h2>
+     <!-- Profile Picture -->
+  <div class="profile-container">
+    <img src="pfp.jpg" alt="Profile Picture" class="profile-pic">
+  </div> 
     <p>Hello! I'm David Joseph, a tech enthusiast with a strong passion for building clean, responsive, and user-friendly websites. My goal is to use technology to solve real-world problems and make a positive impact. I’m currently a student at Power Learn Project’s Software Development Program.</p>
   </section>
 
